# Employees-Lunch

./: .pre-commit-config.yaml  README.md  docker-compose.yml  makefile
docs/: conf.py
lunch_decision/: Dockerfile  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt  temp_excel_file.xlsx
lunch_decision/UserAuth/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
lunch_decision/docs/: conf.py  index.html  restaurants.rst
lunch_decision/docs/_build/doctrees/: UserAuth.doctree  employee.doctree  environment.pickle  index.doctree  menus.doctree  restaurants.doctree
lunch_decision/docs/_build/html/: .buildinfo  UserAuth.html  employee.html  genindex.html  index.html  menus.html  restaurants.html  searchindex.js
lunch_decision/docs/docs/: UserAuth.html  menus.html  objects.inv  restaurants.html  search.html
lunch_decision/docs/docs/_sources/: UserAuth.rst.txt  employee.rst.txt  index.rst.txt  menus.rst.txt
lunch_decision/employee/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
lunch_decision/employee/migrations/: 0001_initial.py
lunch_decision/excel_files/: gada_menu_hhs.xlsx
lunch_decision/lunch_decision/: asgi.py  settings.py  urls.py  wsgi.py
lunch_decision/menus/: admin.py  filters.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
lunch_decision/menus/migrations/: 0001_initial.py
lunch_decision/restaurants/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
lunch_decision/restaurants/migrations/: 0001_initial.py
(+9 files in other folders)
